@@ -1,0 +1,9 @@
+#	$NetBSD: Makefile,v 1.1 2001/05/17 20:42:08 fredette Exp $
+
+PROG=	sunndd
+SRCS=	sunndd.c
+MAN=	sunndd.8
+
+CPPFLAGS+=-DHAVE_CONFIG_H -I${.CURDIR}
+
+.include <bsd.prog.mk>
