@@ -1,3 +1,5 @@
+$NetBSD: README,v 1.2 2001/05/17 20:42:08 fredette Exp $
+
 README for sunndd-0.1
 
 Copyright (c) 2001 Matthew Fredette.  All rights reserved.
